manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yt-seo-assistant
  namespace: yt-seo
spec:
  type: NodePort
  selector:
    app: yt-seo-assistant
  ports:
    - port: 8501
      targetPort: 8501
      nodePort: 30085
