manifests/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yt-seo-web
  namespace: yt-seo
spec:
  type: NodePort
  selector:
    app: yt-seo-web
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30300
